[package]
name = "tile-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clamp = "0.1.0"
glam = { version = "0.21.2", features = ["serde"] }
glium = "0.31.0"
image = { version = "0.24.2", default_features = false, features = ["png"] }
log = "0.4.17"
rbitset = "0.3.1"
ron = "0.7.1"
serde = { version = "1.0.138", features = ["derive"] }
simple_logger = { version = "2.2.0", default_features = false, features = ["colors"]}

[build-dependencies]
shaderc = { version = "0.8.0", features = ["build-from-source"] }
